--- a/index.html
+++ b/index.html
@@ -1,1 +1,37 @@
-<h1>Hello</h1>
+<head>
+    <title>Adtima</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <style>
+        * {margin: 0;padding: 0}
+        html,body {height: 100%;overflow: hidden;background-color: white;}
+        iframe {overflow: hidden;border: none;}
+        #wrapper {width: 60vw!important;height: 60vh!important;transform-origin: 0 0;}
+    </style>   
+</head>
+<body>
+<div id="wrapper">
+<script async="async" src="https://www.googletagservices.com/tag/js/gpt.js"></script>
+<script>
+ var googletag = googletag || {};
+ googletag.cmd = googletag.cmd || [];
+</script>
+<div id='div-gpt-ad-1679914654323-0' style="width:60vw!important;height: 60vh!important;">
+  <script>
+    googletag.cmd.push(function() {
+    googletag.pubads().display('/21723026843/Programmatic_Testing-Visibility_2023/PM_testing-Visibility_APP_Whiskas_Welcome_640x1400_27Mar23', [640, 1400], 'div-gpt-ad-1679914654323-0');
+    });
+  </script>
+</div>
+</div>
+<script>
+    // scale ads
+    var phoneWidth = parseInt('viewportSize' in window ? viewportSize.windowWidth : (window.innerWidth ||  window.screen.width));
+    var phoneHeight = parseInt('viewportSize' in window ? viewportSize.windowHeight : (window.innerHeight ||  window.screen.height));
+    var w_ads = 640;
+    var phoneScale = phoneWidth / w_ads;
+    //var phoneScaleY = phoneHeight*0.92 / 1400;
+    var elem = document.getElementById('wrapper');
+    elem.style.cssText ="transform: scale("+phoneScale+");-moz-transform: scale("+phoneScale+");-webkit-transform: scale("+phoneScale+");-o-transform: scale("+phoneScale+");-ms-transform: scale("+phoneScale+");transform-origin:0 0;-moz-transform-origin:0 0; -webkit-transform-origin:0 0; -o-transform-origin:0 0;-ms-transform-origin:0 0";
+</script>
+</body>
