--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<html>
 <head>
     <title>Adtima</title>
     <meta name="viewport" content="width=device-width,initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
@@ -35,3 +37,4 @@
     elem.style.cssText ="transform: scale("+phoneScale+");-moz-transform: scale("+phoneScale+");-webkit-transform: scale("+phoneScale+");-o-transform: scale("+phoneScale+");-ms-transform: scale("+phoneScale+");transform-origin:0 0;-moz-transform-origin:0 0; -webkit-transform-origin:0 0; -o-transform-origin:0 0;-ms-transform-origin:0 0";
 </script>
 </body>
+</html>
